--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<title>Freie</title>
 	</head>
 	<body>
-		
+		<header class="header">
+			<img src="images/fr_2.jpg">
+		</header>
 	</body>
 </html>
